# pick-and-place

./: .gitignore  README.md  v1.rviz
src/cw1_team_09/: CMakeLists.txt  package.xml
src/cw1_team_09/include/: cw1_class.h
src/cw1_team_09/launch/: run_solution.launch
src/cw1_team_09/src/: cw1_class.cpp  cw1_node.cpp
src/cw2_team_09/: CMakeLists.txt  package.xml
src/cw2_team_09/include/: cw2_class.h
src/cw2_team_09/launch/: run_solution.launch
src/cw2_team_09/scripts/: stl2pcd.py
src/cw2_team_09/src/: cw2_class.cpp  cw2_node.cpp
src/cw2_world_spawner/scripts/: world_spawner.py
