<?xml version="1.0"?>
<package format="2">
  <name>cw1_team_09</name>
  <version>0.0.0</version>
  <description>
    A package template for the cw1 solution. The name should be changed to the team 
    number, for example team 3 would change the name to cw1_team_3.
  </description>

  <maintainer email="luke@todo.todo">luke</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build Dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cw1_world_spawner</build_depend>
  <build_depend>message_generation</build_depend>
  
  <!-- Execution Dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>cw1_world_spawner</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <!-- Other tools can request additional information here -->
  </export>
</package>
